--- a/cooking/thai-chicken-lettuce-wraps.html
+++ b/cooking/thai-chicken-lettuce-wraps.html
@@ -91,16 +91,6 @@
                 </ol>
             </section>
         </main>
-        <script>
-            // Get the full path of the current page
-            const fullPath = window.location.pathname;
-
-            // Extract the directory from the path
-            let directory = fullPath.substring(1, fullPath.lastIndexOf("/"));
-
-            const directoryElement = document.getElementById("directory");
-
-            directoryElement.textContent = directory;
-        </script>
+        <script src="../assets/js/scripts.js"></script>
     </body>
 </html>
